# Django-Task-Manager

./: .env.example  .gitignore  Makefile  README.md  build.sh  manage.py  procfile  pyproject.toml
.github/workflows/: main.yml
hexlet-code/: settings.py  urls.py  wsgi.py
hexlet-code/labels/: apps.py  forms.py
hexlet-code/labels/migrations/: 0001_initial.py
hexlet-code/statuses/: apps.py  models.py
hexlet-code/tasks/: apps.py  filters.py  forms.py  tests.py
hexlet-code/tasks/migrations/: 0003_alter_task_status.py
hexlet-code/users/: apps.py  tests.py
task_manager/: asgi.py  forms.py  mixins.py  settings.py  urls.py  utils.py  views.py  wsgi.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_data.json  users.json
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
templates/: base.html  create.html  delete.html  index.html  login.html  update.html
templates/labels/: create_label.html  delete_label.html  index.html  update_label.html
templates/statuses/: create_status.html  delete_status.html  index.html  update_status.html
templates/tasks/: create_task.html  delete_task.html  index.html  task.html  update_task.html
templates/users/: create_user.html  delete_user.html  index.html  login.html  update_user.html
(+16 files in other folders)
