[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Django task-manager"
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
django-bootstrap4 = "^23.4"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
