[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Django task-manager"
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
ipython = "^8.20.0"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^23.4"
django-crispy-forms = "^2.1"
django-filter = "^23.5"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
